samples/_failures_safe/1761095979_efa476_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87e1c869.c:181: error: expected ‘;’, ‘,’ or ‘)’ at end of input
